Color in TimeTable

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "myJentera",
-  "name": "myJentera Monitoring System",
+  "short_name": "CRS",
+  "name": "CRS",
   "icons": [
     {
       "src": "./assets/img/favicon.png",
