--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "myJentera",
+  "name": "CRS",
   "version": "1.0.0",
-  "description": "Dashboard myJentera Monitoring System",
+  "description": "Dashboard CRS",
   "author": "INNATES",
   "homepage": "http://www.innates.my/",
   "copyright": "",
@@ -41,8 +41,10 @@
     "igniteui-react-gauges": "^16.14.3",
     "moment-timezone": "^0.5.33",
     "mqtt": "^3.0.0",
+    "node-libs-browser": "^2.2.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
+    "randomcolor": "^0.6.2",
     "react": "^16.14.0",
     "react-accessible-accordion": "^3.3.5",
     "react-app-polyfill": "^1.0.6",
@@ -60,7 +62,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.3.0",
     "react-test-renderer": "^16.14.0",
-    "reactstrap": "^8.10.0",
+    "reactstrap": "^9.0.1",
     "simple-line-icons": "^2.5.5",
     "styled-components": "^5.3.1",
     "supercluster": "^7.1.3",
