--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@syncfusion/ej2": "^19.3.44",
     "@syncfusion/ej2-react-circulargauge": "^19.3.44",
     "alertifyjs": "^1.13.1",
+    "axios": "^0.26.1",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "chartjs-plugin-labels": "^1.1.0",
@@ -39,12 +40,12 @@
     "google-maps-react": "^2.0.6",
     "igniteui-react-core": "^16.14.3",
     "igniteui-react-gauges": "^16.14.3",
+    "javascript-time-ago": "^2.3.13",
     "moment-timezone": "^0.5.33",
     "mqtt": "^3.0.0",
     "node-libs-browser": "^2.2.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "randomcolor": "^0.6.2",
     "react": "^16.14.0",
     "react-accessible-accordion": "^3.3.5",
     "react-app-polyfill": "^1.0.6",
