register course without BE

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "CRS",
   "version": "1.0.0",
   "description": "Dashboard CRS",
-  "author": "INNATES",
-  "homepage": "http://www.innates.my/",
+  "author": "Amirul Faiz",
+  "homepage": "",
   "copyright": "",
   "license": "MIT",
   "private": true,
@@ -24,7 +24,7 @@
     "@syncfusion/ej2-react-circulargauge": "^19.3.44",
     "alertifyjs": "^1.13.1",
     "axios": "^0.26.1",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^4.6.1",
     "chart.js": "^2.9.4",
     "chartjs-plugin-labels": "^1.1.0",
     "classnames": "^2.3.1",
@@ -62,8 +62,9 @@
     "react-google-maps": "^9.4.5",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.3.0",
+    "react-select": "^5.3.2",
     "react-test-renderer": "^16.14.0",
-    "reactstrap": "^9.0.1",
+    "reactstrap": "^9.0.2",
     "simple-line-icons": "^2.5.5",
     "styled-components": "^5.3.1",
     "supercluster": "^7.1.3",
