--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@syncfusion/ej2": "^19.3.44",
     "@syncfusion/ej2-react-circulargauge": "^19.3.44",
     "alertifyjs": "^1.13.1",
+    "apexcharts": "^3.35.3",
     "axios": "^0.26.1",
     "bootstrap": "^4.6.1",
     "chart.js": "^2.9.4",
     "chartjs-plugin-labels": "^1.1.0",
     "classnames": "^2.3.1",
     "core-js": "^3.17.3",
+    "countdown": "^2.6.0",
     "dateformat": "^3.0.3",
     "devextreme": "^21.1.5",
     "devextreme-react": "^21.1.5",
@@ -48,6 +50,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-accessible-accordion": "^3.3.5",
+    "react-apexcharts": "^1.4.0",
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
@@ -55,6 +58,7 @@
     "react-calendar": "^3.4.0",
     "react-chartjs-2": "^2.11.2",
     "react-d3-speedometer": "^0.6.1",
+    "react-datepicker": "^4.8.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.14.0",
     "react-gauge-chart": "^0.4.0",
@@ -64,6 +68,7 @@
     "react-router-dom": "^5.3.0",
     "react-select": "^5.3.2",
     "react-test-renderer": "^16.14.0",
+    "react-toastify": "^9.0.1",
     "reactstrap": "^9.0.2",
     "simple-line-icons": "^2.5.5",
     "styled-components": "^5.3.1",
